--- a/style.css
+++ b/style.css
@@ -1,6 +1,141 @@
-#code {
-    font-family: monospace;
-    font-size: 1.2em;
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.containerwrapper {
+    position: absolute;
+    height: 80%;
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.container {
+    display: flex;
+    height: 95%;
+    width: 100%;
+    background-color: black;
+
+    overflow: hidden;
+    border-radius: 3px;
+}
+
+#codewrapper {
+    background-color: black;
+    color: white;
+    border: none;
+    box-sizing: border-box;
     width: 50%;
-    padding-bottom: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+#code {
+    width: calc(100% - 35px); 
+    height: 100%;
+
+    background-color: #000;
+    color: white;
+    border: none;
+    padding: 10px;
+    box-sizing: border-box;
+
+    font-family: monospace;
+    font-size: 16px;
+    line-height: 1.5; 
+
+    resize: none;
+    overflow: auto;
+}
+
+#linenums {
+    width: 35px;
+    height: 100%;
+
+    background-color: #000;
+    color: #aeaeae;
+    border-right: 1px solid white;
+    display: flex;
+
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 10px 0;
+    box-sizing: border-box;
+
+    font-family: monospace;
+    font-size: 16px;
+    line-height: 1.5; 
+    resize: none;
+    overflow: hidden;
+}
+
+.number {
+    width: 100%;
+    text-align: right;
+    padding-right: 10px;
+    box-sizing: border-box;
+    font-variant-numeric: tabular-nums;
+}
+
+.separator {
+    width: 3px;
+    background-color: #000;
+    border: 1px solid gray;
+    cursor: ew-resize;
+}
+
+.output {
+    background-color: #333;
+    color: white;
+    width: 50%;
+    height: 100%;
+    overflow: auto;
+    
+    padding: 10px;
+    font-family: monospace;
+    font-size: 16px;
+    line-height: 1.5; 
+}
+
+button {
+    height: 30px;
+    width: 50px;
+    background-color: transparent;
+    
+    border-radius: 3px;
+
+
+    font-family: monospace;
+    font-weight: bold;
+
+    transition: 0.5s;
+}
+
+#runbtn {
+    border: 1px solid #00a65a;
+    color: #008d4c;
+}
+
+#runbtn:hover {
+    background-color: #008d4c;
+    color: white;
+}
+
+#stopbtn {
+    color: #dd4b39;
+    border: 1px solid #d73925;
+}
+
+#stopbtn:hover {
+    background-color: #d73925;
+    color: white;
+}
+
+#inputtext {
+    height: 25px;
+    width: 100%;
 }
