--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body, html {
 }
 
 #codewrapper {
+    min-width: 35px;
     background-color: black;
     color: white;
     border: none;
@@ -36,6 +37,7 @@ body, html {
 }
 
 #code {
+    
     width: calc(100% - 35px); 
     height: 100%;
 
@@ -109,6 +111,9 @@ button {
     
     border-radius: 3px;
 
+    -webkit-user-select: none; 
+    -ms-user-select: none;
+    user-select: none;
 
     font-family: monospace;
     font-weight: bold;
@@ -141,16 +146,110 @@ button {
     width: 100%;
 }
 
-.filebar {
+#filebar {
     width: 100%;
-    height: 5%;
-    background-color: blue;
+    height: 30px;
+    background-color: black;
+
+    border: 1px solid gray;
+    
+    display: flex;
+    flex-direction: row;
+
+    overflow: hidden;
 }
 
 .codespacewrapper {
     width: 100%;
-    height: 95%;
+    height: 100%;
     
     display: flex;
     flex-direction: row;
+}
+
+.filediv {
+    height: 100%;
+    width: fit-content;
+    padding-left: 5px;
+    padding-right: 5px;
+
+    background-color: #333;
+    text-align: center;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: white;
+    font-family: monospace;
+    
+    border-right: 3px solid #242424;
+
+    -webkit-user-select: none; 
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.filediv:hover{
+    background-color: #242424;
+}
+
+#addfilebtn {
+    height: 30px;
+    width: 30px;
+
+    border: none;
+    color: white;
+    
+    -webkit-user-select: none; 
+    -ms-user-select: none;
+    user-select: none;
+
+    font-size: 12px;
+    font-weight: 900;
+
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#functionbar {
+    height: 20px;
+    width: 100%;
+
+    display: flex;
+
+    background-color: rgb(0, 0, 0);
+    border: 1px solid gray;
+}
+
+.functiondiv {
+    background-color: transparent;
+    
+    height: 100%;
+    width: fit-content;
+}
+
+.functionbtn {
+    height: 100%;
+    width: fit-content;
+    color: white;
+
+    padding: 0 10px 0 10px;
+}
+
+.dropcontent {
+    position: relative;
+
+    height: 180px;
+    width: 100%;
+    background-color: white;
+
+    overflow: hidden;
+
+    border-radius: 0 0 10px 10px;
+
+    z-index: 1;
 }
